--- a/config/crds/200-clusterrole.yaml
+++ b/config/crds/200-clusterrole.yaml
@@ -15,7 +15,7 @@
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: knative-samples-admin
+  name: knative-serving-events-admin
   labels:
     samples.knative.dev/release: devel
 aggregationRule:
@@ -28,7 +28,7 @@ rules: [] # Rules are automatically filled in by the controller manager.
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: knative-samples-core
+  name: knative-serving-events-core
   labels:
     samples.knative.dev/release: devel
     samples.knative.dev/controller: "true"
@@ -38,38 +38,8 @@ rules:
     resources: ["events"]
     verbs: ["create"]
 
-  # Allow the reconciliation of exactly our validating webhooks.
-  # This is needed for us to patch in caBundle information.
-  - apiGroups: ["admissionregistration.k8s.io"]
-    resources: ["validatingwebhookconfigurations"]
-    verbs: ["list", "watch"]
-  - apiGroups: ["admissionregistration.k8s.io"]
-    resources: ["validatingwebhookconfigurations"]
-    verbs: ["get", "update"]
-    resourceNames: ["config.webhook.knative-samples.knative.dev", "validation.webhook.knative-samples.knative.dev"]
-
-  # Allow the reconciliation of exactly our mutating webhooks.
-  # This is needed for us to patch in caBundle information.
-  - apiGroups: ["admissionregistration.k8s.io"]
-    resources: ["mutatingwebhookconfigurations"]
-    verbs: ["list", "watch"]
-  - apiGroups: ["admissionregistration.k8s.io"]
-    resources: ["mutatingwebhookconfigurations"]
-    verbs: ["get", "update"]
-    resourceNames: ["defaulting.webhook.knative-samples.knative.dev"]
-
-  # Allow the reconciliation of exactly our CRDs.
-  # This is needed for us to patch in conversion webhook information.
-  - apiGroups: ["apiextensions.k8s.io"]
-    resources: ["customresourcedefinitions"]
-    verbs: ["list", "watch"]
-  - apiGroups: ["apiextensions.k8s.io"]
-    resources: ["customresourcedefinitions"]
-    verbs: ["get", "update"]
-    resourceNames: ["addressableservices.samples.knative.dev", "simpledeployments.samples.knative.dev"]
-
   # Allow us to reconcile our resources.
-  - apiGroups: ["samples.knative.dev"]
+  - apiGroups: ["serving.knative.dev"]
     resources: ["*"]
     verbs: ["get", "list", "update", "watch"]
 
@@ -86,7 +56,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   # A separate cluster role for the things actually needed by this
   # controller's contrived examples.
-  name: knative-samples-resources
+  name: knative-serving-events-resources
   labels:
     samples.knative.dev/release: devel
     samples.knative.dev/controller: "true"
