--- a/config/crds/201-rolebinding.yaml
+++ b/config/crds/201-rolebinding.yaml
@@ -15,15 +15,15 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: knative-samples-namespace-rbac
-  namespace: knative-samples
+  name: knative-serving-events-namespace-rbac
+  namespace: default
   labels:
     samples.knative.dev/release: devel
 subjects:
   - kind: ServiceAccount
     name: controller
-    namespace: knative-samples
+    namespace: default
 roleRef:
   kind: Role
-  name: knative-samples-namespace-rbac
+  name: knative-serving-events-namespace-rbac
   apiGroup: rbac.authorization.k8s.io
