--- a/config/ko/controller.yaml
+++ b/config/ko/controller.yaml
@@ -16,7 +16,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: controller
-  namespace: knative-samples
+  namespace: default
   labels:
     samples.knative.dev/release: devel
 spec:
