--- a/config/controller/deploy.yaml
+++ b/config/controller/deploy.yaml
@@ -68,7 +68,11 @@ spec:
           value: config-observability
         - name: METRICS_DOMAIN
           value: knative.dev/samples
-
+        - name: EVENTSINK
+          valueFrom:
+            configMapKeyRef:
+              name: cloudevent-sink
+              key: target
         securityContext:
           allowPrivilegeEscalation: false
           readOnlyRootFilesystem: true
