update cluster role to allow patch for controller
Signed-off-by: Ishan Khare <me@ishankhare.dev>

--- a/config/crds/200-clusterrole.yaml
+++ b/config/crds/200-clusterrole.yaml
@@ -41,7 +41,7 @@ rules:
   # Allow us to reconcile our resources.
   - apiGroups: ["serving.knative.dev"]
     resources: ["*"]
-    verbs: ["get", "list", "update", "watch"]
+    verbs: ["get", "list", "update", "watch", "patch"]
 
   # The webhook configured the namespace as the OwnerRef on various cluster-scoped resources,
   # which requires we can Get the system namespace.
