--- a/config/controller/deploy.yaml
+++ b/config/controller/deploy.yaml
@@ -46,7 +46,7 @@ spec:
       - name: controller
         # This is the Go import path for the binary that is containerized
         # and substituted here.
-        image: ishankhare07/controller
+        image: ishankhare07/controller:latest
         resources:
           requests:
             cpu: 100m
